--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,11 @@
 name: book_store
 description: "A new Flutter project."
-
 publish_to: 'none'
-
 
 version: 1.0.0+1
 
 environment:
   sdk: ^3.8.0
-
 
 dependencies:
   flutter:
@@ -16,18 +13,25 @@ dependencies:
   cloud_firestore: ^4.13.2
   firebase_core: ^2.32.0
   intl: ^0.18.1
-
-  cupertino_icons: ^1.0.8
-  font_awesome_flutter: ^10.8.0
+  cupertino_icons: ^1.0.2
+  font_awesome_flutter: ^10.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  flutter_launcher_icons: ^0.12.0
   flutter_lints: ^5.0.0
 
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  remove_alpha_ios: true
+  image_path: "assets/icons/icon.jpg"
+  min_sdk_android: 21
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: "assets/icons/icon.jpg"
 
 flutter:
-
   uses-material-design: true
-
+  assets:
+    - "assets/icons/"
